After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779036 - boxed: Plug a memory leak
boxed: Plug a memory leak
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2017-02-21 20:25 UTC by Florian Müllner
Modified: 2017-02-22 04:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
boxed: Plug a memory leak (1.64 KB, patch)
2017-02-21 20:26 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2017-02-21 20:25:59 UTC
See patch (and bug 642652 for the valgrind log that turned up the leak).
Comment 1 Florian Müllner 2017-02-21 20:26:04 UTC
Created attachment 346394 [details] [review]
boxed: Plug a memory leak

The get_field_info() helper methods returns newly allocated memory
we need to free after use.
Comment 2 Philip Chimento 2017-02-22 04:42:01 UTC
Review of attachment 346394 [details] [review]:

+1

Thanks for the fix!
Comment 3 Philip Chimento 2017-02-22 04:42:27 UTC
Attachment 346394 [details] pushed as 0ce5344 - boxed: Plug a memory leak