boxed: Plug a memory leak

The get_field_info() helper methods returns newly allocated memory
we need to free after use.

https://bugzilla.gnome.org/show_bug.cgi?id=779036